Fixed overflow in Daily Feed

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,7 @@
 /* Colors */
 :root {
     --background-color: #404756;
-    --title-background-color: #16181d;
-    --feed-background-color: #23272f;
+    --container-background-color: #23272f;
     --text-color: white;
     --box-shadow-color: #00000040;
 }
@@ -75,14 +74,14 @@ code {
 /* Common Container Styles */
 .titleContainer,
 .feedTitleContainer {
-    background-color: var(--feed-background-color);
+    background-color: var(--container-background-color);
     border-radius: 8px 8px 0 0;
     box-shadow: 0 4px 4px var(--box-shadow-color);
 }
 
 .generalContainer,
 .feedGeneralContainer {
-    background-color: var(--feed-background-color);
+    background-color: var(--container-background-color);
     border-radius: 0 0 8px 8px;
     box-shadow: 0 4px 4px var(--box-shadow-color);
 }
@@ -128,7 +127,8 @@ code {
 
 /* Feed General Container Styles */
 .feedGeneralContainer {
-    height: auto;
+    height: 40rem;
+    overflow: hidden;
 }
 
 /* Welcome Text Styles */
@@ -258,7 +258,7 @@ code {
 .addTaskContainer {
     position: sticky;
     top: 0;
-    background: var(--feed-background-color);
+    background: var(--container-background-color);
     margin: 1px;
     z-index: 1;
     overflow: hidden;
